--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 		</plugins>
+		<finalName>
+			javaapp
+		</finalName>
 	</build>
 
 </project>
