--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,9 @@
 				</configuration>
 			</plugin>
 		</plugins>
+                <finalName>
+			javaapp
+		</finalName>
 	</build>
 
 </project>
