--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,12 @@
 		</dependency>
 
 	</dependencies>
-
+	<distributionManagement>
+		<repository>
+			<id>nexus_cred</id>
+			<url>http://192.168.33.10:8081/repository/nexus_repo/</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
@@ -70,11 +75,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
 		</plugins>
-		<finalName>
-			javaapp
-		</finalName>
 	</build>
 
 </project>
