--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 		<finalName>
 			javaapp
 		</finalName>
-	</build>
 
+
+	</build>
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>maven-central-repository</name>
+			<url>http://192.168.33.10:8081/repository/maven-central-repository/</url>
+		</repository>
+	</distributionManagement>
 </project>
