--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,14 @@
 		</dependency>
 
 	</dependencies>
-
+	<!-- Deploy to Nexus -->
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>maven-central-repository</name>
+			<url>http://192.168.33.10:8081/repository/maven-central-repository/</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
