--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,39 @@
 version: '3'
 services:
-  mysql-db:
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+  mysql:
     image: mysql:latest
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=achatdb
-
-  spring-boot-app:
-    image: azizbenzarti/devopsapp
-    ports:
-      - "8089:8081"
+  spring-app:
+    image: azizbenzarti/backend-app:latest
     depends_on:
-      - mysql-db
+      - mysql
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/achatdb
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/achatdb
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=
-  angular-app:
-    image: azizbenzarti/achat_frontend
-    container_name: angular-app
     ports:
-      - "4200:80"
-    depends_on:
-      - spring-boot-app
-    networks:
-      - my-network
-
-networks:
-  my-network:
+      - "8082:8082"
+  angular-app:
+    image:  azizbenzarti/frontend-app:latest
+    ports:
+      - "4200:80"  #
+   depends_on:
+      - spring-app
+  
