--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+server.port=8082
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.port=8081
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
