--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 				<version>2.19.1</version>
 			</plugin>
 
+				<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.7.9</version>
+		</plugin>
 		</plugins>
 	</build>
 
