--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.sonar.plugins</groupId>
+			<artifactId>sonar-jacoco-plugin</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 
 	</dependencies>
 	<distributionManagement>
