--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-		<properties>
-			<!-- JaCoCo Properties -->
-			<jacoco.version>0.8.6</jacoco.version>
-			<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-			<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-			<sonar.jacoco.reportPath>/target/jacoco.exec</sonar.jacoco.reportPath>
-			<sonar.language>java</sonar.language>
-		</properties>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>0.8.7</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -107,14 +94,13 @@
 				<version>0.8.7</version>
 				<executions>
 					<execution>
-						<id>jacoco-initialize</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>jacoco-site</id>
-						<phase>package</phase>
+						<id>report</id>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
