--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=*
 management.metrics.export.prometheus.enabled=true
