--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - MYSQL_DATABASE=achatdb
   spring-app:
     image: azizbenzarti/devopsapp:latest
+    container_name: spring-boot
     depends_on:
       - mysql
     environment:
@@ -15,4 +16,15 @@ services:
       - SPRING_DATASOURCE_PASSWORD=
     ports:
       - "8082:8082"
+ angular-app:
+    image: azizbenzarti/achat_frontend
+    container_name: angular-app
+    ports:
+      - "4200:80"
+    depends_on:
+      - spring-boot-app
+    networks:
+      - my-network
+networks:
+  my-network:
   
