--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "4200:80"
     depends_on:
-      - spring-boot-app
+      - spring-app
     networks:
       - my-network
 networks:
