--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<sonar.jacoco.reportPath>${project.basedir}/target/coverage-reports/jacoco-unit.exec</sonar.jacoco.reportPath>
 
 			<sonar.coverage.jacoco.xmlReportPaths>
-				${project.basedir}/site/jacoco/jacoco.xml
+				${project.basedir}/target/site/jacoco/jacoco.xml
 			</sonar.coverage.jacoco.xmlReportPaths>
 
 	</properties>
