--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<sonar.jacoco.reportPath>${project.basedir}/target/coverage-reports/jacoco-unit.exec</sonar.jacoco.reportPath>
 
 			<sonar.coverage.jacoco.xmlReportPaths>
-				${project.basedir}/target/site/jacoco/jacoco.xml
+				${project.basedir}/target/surefire-reports/TEST-tn.esprit.rh.achat.services.StockServiceImplTest.xml
 			</sonar.coverage.jacoco.xmlReportPaths>
 
 	</properties>
@@ -124,6 +124,11 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.1</version>
 			</plugin>
 		</plugins>
 	</build>
