--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,13 @@ server.port=8089
 
 ### DATABASE ###
 #spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://mysqldb/achatdb
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://mysqldb/achatdb
+spring.datasource.username=root
+spring.datasource.password=root
 ### JPA / HIBERNATE ###
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #logging configuration
 logging.level.com.zaxxer.hikari=INFO
@@ -23,13 +23,13 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%
 
 
 ### DATABASE H2 ###
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 #--------------------JPA-ORM Properties-----------------
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.format_sql=true
