--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,11 @@
 				</configuration>
 			</plugin>
 
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.1</version>
+			</plugin>
 		</plugins>
 	</build>
 
