--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<java.version>1.8</java.version>
-
+			<sonar.projectKey>tn.esprit.rh:achat</sonar.projectKey>
+			<sonar.host.url>http://192.168.33.10:9000</sonar.host.url>
+			<sonar.login>squ_eb4687194e0f318784cc1f9b754e787f3a00d9b9</sonar.login>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -88,6 +90,25 @@
 					<source>9</source>
 					<target>9</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.7</version> <!-- Use the latest version -->
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
