--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8089
 
 ### DATABASE ###
 #spring.datasource.url=jdbc:mysql://localhost:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://192.168.33.10:3306/achatdb
+spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb
 spring.datasource.username=root
 spring.datasource.password=root
 ### JPA / HIBERNATE ###
@@ -20,3 +20,7 @@ logging.level.com.zaxxer.hikari=INFO
 logging.level.org.springframework=INFO 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
+
+#Monitoring
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
