--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
 	<distributionManagement>
 	<repository>
 	<id>deployment</id>
-	<name>Nexus Repository</name>
-	<url>http://192.168.3.44:8081/repository/deploy/</url>
+	<url>http://192.168.3.44:8081/repository/team/</url>
 	</repository>
 	</distributionManagement>
 	<dependencies>
