--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,20 @@
 			<artifactId>h2</artifactId>
 			<version>2.2.224</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.7.0</version>
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<repository>
