--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ server.port=8089
 
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://db:3306/achatdb
+#spring.datasource.url=jdbc:mysql://localhost:3306/achatdb
 spring.datasource.username=root
+#spring.datasource.password=
 spring.datasource.password=1234
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
