--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://db:3306/achatdb
+spring.datasource.url=jdbc:mysql://192.168.3.44:3306/achatdb
 #spring.datasource.url=jdbc:mysql://localhost:3306/achatdb
 spring.datasource.username=root
 #spring.datasource.password=
